--- a/about.html
+++ b/about.html
@@ -1,10 +1,10 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1.0">
   <title>about</title>
-  <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,400" rel="stylesheet" type="text/css">
+  <link href="//fonts.googleapis.com/css?family=Ubuntu:300,400,400" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="css/standardize.css">
   <link rel="stylesheet" href="css/about-grid.css">
   <link rel="stylesheet" href="css/about.css">
