--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1.0">
   <title>blog</title>
-  <link href="http://fonts.googleapis.com/css?family=Ubuntu:700,300" rel="stylesheet" type="text/css">
+  <link href="//fonts.googleapis.com/css?family=Ubuntu:700,300" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="css/standardize.css">
   <link rel="stylesheet" href="css/blog-grid.css">
   <link rel="stylesheet" href="css/blog.css">
