--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0076)file:///C:/Users/Kevin/Desktop/Rebels/Photos/MoreThanRobots/test2/index.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   
   <meta name="viewport" content="initial-scale=1.0">
@@ -8,6 +7,7 @@
   <link rel="stylesheet" href="./index_files/standardize.css">
   <link rel="stylesheet" href="./index_files/index-grid.css">
   <link rel="stylesheet" href="./index_files/index.css">
+   <link href="//fonts.googleapis.com/css?family=Ubuntu:300,400,400" rel="stylesheet" type="text/css">
 </head>
 <body class="body page-index clearfix">
   <div class="topshroud clearfix">
