--- a/sponsors.html
+++ b/sponsors.html
@@ -24,20 +24,20 @@
   </div>
   <div class="wrapper wrapper-1"><div class="content">     
     <h2>Our Sponsors</h2>
-    <h3>Namesake</h3>
-    <p><img src="sponsors/gm-logo.jpg" width="17%">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsors/google.png" width="34%">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsors/ralogo.gif" width="34%"></p><br><hr align="center" width="100%">
+  <!- heights are inherited to auto. widths are as follows. Square= 11%, Rectangle (above 4:3)= 27%, Rectangle (below 4:3)= 18%. -->  <h3>Namesake</h3>
+    <p><img src="sponsors/gm-logo.jpg" width="17%">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsors/google.png" width="27%">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsors/ralogo.gif" width="27%"></p><br><hr align="center" width="100%">
   <br>
 
     <h3>Gold</h3>
-    <p><img src="sponsors/novatek2.jpg" width="34%">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsors/sch_WRDSB.gif" width="17%">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsors/speakup.jpg" width="34%"></p>
+    <p><img src="sponsors/novatek2.jpg" width="27%">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsors/sch_WRDSB.gif" width="17%">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsors/speakup.jpg" width="27%"></p>
     <br><hr align="center" width="100%">
     <br>
     <h3>Silver</h3>
-    <p><img src="sponsors/abellpestcontrol.jpg" width="25%">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsors/spaenaur.jpg" width="34%">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsors/boschrexroth.jpg" width="34%">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsors/solidworks.jpg" width="34%"></p>
+    <p><img src="sponsors/abellpestcontrol.jpg" width="18%">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsors/spaenaur.jpg" width="27%">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsors/boschrexroth.jpg" width="27%">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsors/solidworks.jpg" width="27%"></p>
 <br><hr align="center" width="100%">
   <br>
     <h3>Bronze</h3>
-    <p><img src="sponsors/kitchener-rangers-logo.jpg" width="18%">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsors/westmount.jpg" width="18%">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsors/metalsupermarkets.png" width="34%">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsors/clearpath.jpg" width="34%">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsors/felton.jpg" width="18%" height="120">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsors/artline.jpg" width="160" height="25%">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsors/bez.jpg" width="160" height="25%"></p>
+    <p><img src="sponsors/kitchener-rangers-logo.jpg" width="11%">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsors/westmount.jpg" width="11%">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsors/metalsupermarkets.png" width="27%">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsors/clearpath.jpg" width="27%">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsors/felton.jpg" width="11%" height="120">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsors/artline.jpg" width="160" height="18%">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsors/bez.jpg" width="160" height="18%"></p>
       
     <p>&nbsp;</p>
     <!-- end .content --></div></div>
