--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   
   <meta name="viewport" content="initial-scale=1.0">
-  <title>index</title>
+  <title>2702 Rebels</title>
   <link href="./index_files/css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="./index_files/standardize.css">
   <link rel="stylesheet" href="./index_files/index-grid.css">
