--- a/meetings.html
+++ b/meetings.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1.0">
-  <title>meetings</title>
+  <title>Meetings</title>
   <link href="//fonts.googleapis.com/css?family=Ubuntu:300,400" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="css/standardize.css">
   <link rel="stylesheet" href="css/meetings-grid.css">
