--- a/sponsors.html
+++ b/sponsors.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1.0">
-  <title>sponsors</title>
+  <title>Sponsors</title>
   <link href="//fonts.googleapis.com/css?family=Ubuntu:400,400,700,300" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="css/standardize.css">
   <link rel="stylesheet" href="css/sponsors-grid.css">
