Fix CSS, FIx Title

--- a/Resources.html
+++ b/Resources.html
@@ -1,14 +1,13 @@
 
 <!DOCTYPE html>
-<!-- saved from url=(0061)file:///C:/Users/Kevin/Downloads/FileSystemHandler%20(2).ashx -->
 <html style=""><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   
   <meta name="viewport" content="initial-scale=1.0">
-  <title>About</title>
-  <link href="file:///C:/Users/Kevin/Downloads/Resources_files/css" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="file:///C:/Users/Kevin/Downloads/Resources_files/standardize.css">
-  <link rel="stylesheet" href="file:///C:/Users/Kevin/Downloads/Resources_files/about-grid.css">
-  <link rel="stylesheet" href="file:///C:/Users/Kevin/Downloads/Resources_files/about.css">
+  <title>Resources</title>
+    <link href="//fonts.googleapis.com/css?family=Ubuntu:300,400,400" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="css/standardize.css">
+  <link rel="stylesheet" href="css/about-grid.css">
+  <link rel="stylesheet" href="css/about.css">
 </head>
 <body class="body page-about clearfix" data-prokeyscachednode="false">
   <div class="topbar">
