--- a/Resources.html
+++ b/Resources.html
@@ -118,8 +118,8 @@ This course extends students' understanding of computer systems and computer int
   
 </div>
 
-  <script src="file:///C:/Users/Kevin/Downloads/Resources_files/jquery-min.js.download"></script>
-  <script src="file:///C:/Users/Kevin/Downloads/Resources_files/about.js.download"></script>
+  <script src="js/jquery-min.js"></script>
+  <script src="js/about.js"></script>
 
 
 </body></html>
