--- a/Resources.html
+++ b/Resources.html
@@ -114,12 +114,12 @@ This course extends students' understanding of computer systems and computer int
   <div id="textalumni" class="text text-4 js-text">
     <strong><strong>QR Code</strong></strong>
   <p> 2702 Rebels QR (Quick Response) Code to open our website from your mobile devices. </p>
-<p><img src="file:///C:/Users/Kevin/Downloads/Resources_files/qrcode.jpg" width="200" height="200"></p>
+<p><img src="/qrcode.jpg" width="200" height="200"></p>
   
 </div>
 
-  <script src="/js/jquery-min.js"></script>
-  <script src="/js/about.js"></script>
+  <script src="js/jquery-min.js"></script>
+  <script src="js/about.js"></script>
 
 
 </body></html>
