--- a/sponsors.html
+++ b/sponsors.html
@@ -41,7 +41,7 @@
       
     <p>&nbsp;</p>
     <!-- end .content --></div></div>
-  <p id="SponsorText" class="sponsorus sponsorus-2">Sponsor Us</p>
+  <h2 id="SponsorText" class="sponsorus sponsorus-2">Sponsor Us</h2>
   <div class="text">
     <p><strong>How You Can Help
 
