--- a/blog.html
+++ b/blog.html
@@ -1,17 +1,6 @@
 <!doctype html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="initial-scale=1.0">
-  <title>blog</title>
-  <link href="//fonts.googleapis.com/css?family=Ubuntu:700,300" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="css/standardize.css">
-  <link rel="stylesheet" href="css/blog-grid.css">
-  <link rel="stylesheet" href="css/blog.css">
+<meta http-equiv="refresh" content="0; url= /blog.php" />
 </head>
-<body class="body page-blog clearfix">
-  <p class="text">8404: Blog Not Found</p>
-
-  <script src="js/jquery-min.js"></script>
-</body>
 </html>
