Migrate sponsortable to components folder

--- a/sponsors.html
+++ b/sponsors.html
@@ -24,7 +24,7 @@
   </div>
   <div class="wrapper wrapper-1"><div class="content">     
     <h2>Our Sponsors</h2>
-  <!- heights are inherited to auto. widths are as follows. Square= 11%, Rectangle (above 4:3)= 27%, Rectangle (below 4:3)= 18%. -->  <h3>Namesake</h3>
+  <!-- heights are inherited to auto. widths are as follows. Square= 11%, Rectangle (above 4:3)= 27%, Rectangle (below 4:3)= 18%. -->  <h3>Namesake</h3>
     <p><img src="sponsors/gm-logo.jpg" width="17%">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsors/google.png" width="27%">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsors/ralogo.gif" width="27%"></p><br><hr align="center" width="100%">
   <br>
 
@@ -61,52 +61,7 @@
     <p>&nbsp;To recognize the support of our sponsors, 2702 Rebels have developed a multi-tiered sponsorship program for monetary and in-kind sponsorships. All sponsors will receive recognition on our team webpage. Additional opportunities exist for companies to have their corporate logo included on the webpage and the robot. Our top level sponsors will be included as part of our team name at events.</p>
 </div>
   <div class="wrapper wrapper-2"> <div>
-   <center><table width="900" border="1">
-  <tr>
-    <td width="180" bgcolor="#bb3637">&nbsp;</td>
-    <td width="180" align="center" bgcolor="#bb3637"><font color="#FFFFFF"><strong>Bronze</strong></font></td>
-    <td width="180" align="center" bgcolor="#bb3637"><font color="#FFFFFF"><strong>Silver</strong></font></td>
-    <td width="180" align="center" bgcolor="#bb3637"><font color="#FFFFFF"><strong>Gold</strong></font></td>
-    <td width="180" align="center" bgcolor="#bb3637"><font color="#FFFFFF"><strong>Namesake</strong></font></td>
-  </tr>
-  <tr>
-    <td width="180">Donation Amount</td>
-    <td width="180" align="center">< $500</td>
-    <td width="180" align="center">$500 - $1499</td>
-    <td width="180" align="center">$1500 -$2499</td>
-    <td width="180" align="center">> $2500</td>
-  </tr>
-  <tr>
-    <td width="180" bgcolor="#bb3637"><font color="#FFFFFF">Name on Web Page</font></td>
-    <td width="180" align="center" bgcolor="#bb3637"><font color="#FFFFFF">Yes</font></td>
-    <td width="180" align="center" bgcolor="#bb3637"><font color="#FFFFFF">Yes</font></td>
-    <td width="180" align="center" bgcolor="#bb3637"><font color="#FFFFFF">Yes</font></td>
-    <td width="180" align="center" bgcolor="#bb3637"><font color="#FFFFFF">Yes</font></td>
-  </tr>
-  <tr>
-    <td width="180">Logo on Web Page</td>
-    <td width="180" align="center">Yes</td>
-    <td width="180" align="center">Yes</td>
-    <td width="180" align="center">Yes</td>
-    <td width="180" align="center">Yes</td>
-  </tr>
-  <tr>
-    <td width="180" bgcolor="#bb3637"><font color="#FFFFFF">Logo on Robot</font></td>
-    <td width="180" align="center" bgcolor="#bb3637"><font color="#FFFFFF">No</font></td>
-    <td width="180" align="center" bgcolor="#bb3637"><font color="#FFFFFF">No</font></td>
-    <td width="180" align="center" bgcolor="#bb3637"><font color="#FFFFFF">Yes</font></td>
-    <td width="180" align="center" bgcolor="#bb3637"><font color="#FFFFFF">Yes</font></td>
-  </tr>
-  <tr>
-    <td width="180">Inclusion in Team Name</td>
-    <td width="180" align="center">No</td>
-    <td width="180" align="center">No</td>
-    <td width="180" align="center">No</td>
-    <td width="180" align="center">Yes</td>  
-    </tr>
-</table>
-
-   </center>
+  <iframe src= "/components/sponsortable.html" style="border:none;"> </iframe>
  </div>
 </div>
 
