start to migrate away from old index_files

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
   <meta name="viewport" content="initial-scale=1.0">
   <title>2702 Rebels</title>
   <link href="./index_files/css" rel="stylesheet" type="text/css">
-  <link rel="stylesheet" href="./index_files/standardize.css">
-  <link rel="stylesheet" href="./index_files/index-grid.css">
-  <link rel="stylesheet" href="./index_files/index.css">
+  <link rel="stylesheet" href="./css/standardize.css">
+  <link rel="stylesheet" href="./css/index-grid.css">
+  <link rel="stylesheet" href="./css/index.css">
    <link href="//fonts.googleapis.com/css?family=Ubuntu:300,400,400" rel="stylesheet" type="text/css">
 </head>
 <body class="body page-index clearfix">
   <div class="topshroud clearfix">
     <div class="element"></div>
-    <img class="image" src="./index_files/2702RebelsText.svg">
+    <img class="image" src="./images/2702RebelsText.svg">
     <p class="text">Eastwood Collegiate Institute <span>FIRST </span>Robotics Team</p>
   </div>
   <div class="topbar">
