fix text margin

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
   <div class="topshroud clearfix">
     <div class="element"></div>
     <img class="image" src="./images/2702RebelsText.svg">
-    <p class="text">Eastwood Collegiate Institute <span>FIRST </span>Robotics Team</p>
-  </div>
+<p class="text" style="margin-bottom: 0;">Eastwood Collegiate Institute <span>FIRST </span>Robotics Team</p>  </div>
   <div class="topbar">
     <button onclick="window.location=&#39;blog.html&#39;;" class="blog">Blog</button>
     <button onclick="window.location=&#39;index.html&#39;;" class="home">Home</button>
