--- a/sponsors.html
+++ b/sponsors.html
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html>
 <head>
@@ -22,7 +23,7 @@
     <button id="oursponsors" class="oursponsors">Our Sponsors</button>
     <button id="sponsorus" class="sponsorus">Sponsor Us</button>
   </div>
-  <div class="wrapper wrapper-1"><div class="content">     
+  <div class="wrapper wrapper-1"><div class="content">
     <h2>Our Sponsors</h2>
   <!- heights are inherited to auto. widths are as follows. Square= 11%, Rectangle (above 4:3)= 27%, Rectangle (below 4:3)= 18%. -->  <h3>Namesake</h3>
     <p><img src="sponsors/gm-logo.jpg" width="17%">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsors/google.png" width="27%">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsors/ralogo.gif" width="27%"></p><br><hr align="center" width="100%">
@@ -37,8 +38,10 @@
 <br><hr align="center" width="100%">
   <br>
     <h3>Bronze</h3>
-    <p><img src="sponsors/kitchener-rangers-logo.jpg" width="11%">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsors/westmount.jpg" width="11%">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsors/metalsupermarkets.png" width="27%">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsors/clearpath.jpg" width="27%">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsors/felton.jpg" width="11%" height="120">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsors/artline.jpg" width="160" height="18%">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsors/bez.jpg" width="160" height="18%"></p>
-      
+    <p><img src="sponsors/kitchener-rangers-logo.jpg" width="11%">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsors/westmount.jpg" width="11%">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsors/metalsupermarkets.png" width="27%">&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsors/clearpath.jpg" width="27%"> &nbsp;&nbsp;&nbsp;&nbsp; <img src="sponsors/felton.jpg" width="11%"> &nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsors/artline.jpg" width="18%" >&nbsp;&nbsp;&nbsp;&nbsp;<img src="sponsors/bez.jpg" width="18%">
+
+    </p>
+
     <p>&nbsp;</p>
     <!-- end .content --></div></div>
   <h2 id="SponsorText" class="sponsorus sponsorus-2">Sponsor Us</h2>
@@ -74,7 +77,7 @@
     <td width="180" align="center">< $500</td>
     <td width="180" align="center">$500 - $1499</td>
     <td width="180" align="center">$1500 -$2499</td>
-    <td width="180" align="center">> $2500</td>
+    <td width="180" align="center"> $2500</td>
   </tr>
   <tr>
     <td width="180" bgcolor="#bb3637"><font color="#FFFFFF">Name on Web Page</font></td>
@@ -102,7 +105,7 @@
     <td width="180" align="center">No</td>
     <td width="180" align="center">No</td>
     <td width="180" align="center">No</td>
-    <td width="180" align="center">Yes</td>  
+    <td width="180" align="center">Yes</td>
     </tr>
 </table>
 
