Minor fixes to blog.php Updated html pages to directly use blog.php instead of a redirect from blog.html

--- a/Resources.html
+++ b/Resources.html
@@ -11,7 +11,7 @@
 </head>
 <body class="body page-about clearfix" data-prokeyscachednode="false">
   <div class="topbar">
-    <button onclick="window.location=&#39;blog.html&#39;;" class="about about-1">Blog</button>
+    <button onclick="window.location=&#39;blog.php&#39;;" class="about about-1">Blog</button>
     <button onclick="window.location=&#39;index.html&#39;;" class="home">Home</button>
     <button onclick="window.location=&#39;meetings.html&#39;;" class="meetings">Meetings</button>
     <button onclick="window.location=&#39;sponsors.html&#39;;" class="sponsors">Sponsors</button>
