--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 </head>
 <body class="body page-about clearfix">
   <div class="topbar">
-    <button onClick="window.location='blog.html';" class="about about-1">Blog</button>
+    <button onClick="window.location='blog.php;" class="about about-1">Blog</button>
     <button onClick="window.location='index.html';" class="home">Home</button>
     <button onClick="window.location='meetings.html';" class="meetings">Meetings</button>
     <button onClick="window.location='sponsors.html';" class="sponsors">Sponsors</button>
