--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <img class="image" src="./images/2702RebelsText.svg">
 <p class="text" style="margin-bottom: 0;">Eastwood Collegiate Institute <span>FIRST </span>Robotics Team</p>  </div>
   <div class="topbar">
-    <button onclick="window.location=&#39;blog.html&#39;;" class="blog">Blog</button>
+    <button onclick="window.location=&#39;blog.php&#39;;" class="blog">Blog</button>
     <button onclick="window.location=&#39;index.html&#39;;" class="home">Home</button>
     <button onclick="window.location=&#39;meetings.html&#39;;" class="meetings">Meetings</button>
     <button onclick="window.location=&#39;sponsors.html&#39;;" class="sponsors">Sponsors</button>
